Добавлен Billing и взаимодействие через Kafka. Нужны запуски тестов