@@ -1,18 +1,19 @@
 package otus.user;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import otus.exception.SrvException;
-import otus.jwt.JwtRequest;
-import otus.kafka.Event;
-import otus.kafka.EventProducer;
-import otus.kafka.EventStatus;
-import otus.kafka.EventType;
+import otus.lib.jwt.JwtRequest;
+import otus.lib.event.*;
+import otus.lib.exception.*;
+
+
 
 import java.util.List;
 
-
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class UserService implements UserServiceInterface {
@@ -22,55 +23,57 @@ public class UserService implements UserServiceInterface {
     @Autowired
     private final EventProducer eventProducer;
 
-//    @Autowired
-//    public UserService(UserRepositoryInterface userRepository){
-//        this.userRepository = userRepository;
-//    }
 
     @Override
-    public UserDto registerUser(UserPub user){
-        if( user.getLogin() == null || user.getLogin().isEmpty()){throw new SrvException(UserErrorType.ERR_LOGIN_EMPTY);}
-        if( user.getEmail() ==null || user.getEmail().isEmpty()){throw new SrvException(UserErrorType.ERR_EMAIL_EMPTY);}
-        if( !userRepository.findByEmail(user.getEmail()).isEmpty() ){throw new SrvException(UserErrorType.ERR_EMAIL_DUBLICATE);}
-        if( !userRepository.findByLogin(user.getLogin()).isEmpty() ){throw new SrvException(UserErrorType.ERR_LOGIN_DUBLICATE);}
-        eventProducer.sendMessage("ok", new Event(EventType.USER_CREATE, EventStatus.SUCCESS, "user", "ok"));
+    public UserDto registerUser(User user){
+        if( user.getLogin() == null || user.getLogin().isEmpty()){throw new SrvException(ErrorType.USR_LOGIN_EMPTY);}
+        if( user.getEmail() ==null || user.getEmail().isEmpty()){throw new SrvException(ErrorType.USR_EMAIL_EMPTY);}
+        if( !userRepository.findByEmail(user.getEmail()).isEmpty() ){throw new SrvException(ErrorType.USR_EMAIL_DUBLICATE);}
+        if( !userRepository.findByLogin(user.getLogin()).isEmpty() ){throw new SrvException(ErrorType.USR_LOGIN_DUBLICATE);}
+        try {
+            Event event = new Event(EventType.USER_CREATE, EventStatus.SUCCESS,
+                    "user", user.getEmail(), user.getId(), -1, -1);
+            eventProducer.sendMessage(event);
+        }catch (RuntimeException | JsonProcessingException ex){
+            log.info(String.valueOf(ex));
+        }
         return UserMapper.mapToUserDto(userRepository.save(user));
     }
 
     @Override
-    public UserPub loginUser(JwtRequest request){
-        List<UserPub> lst = userRepository.findByLogin(request.getLogin());
-        if(lst.isEmpty() ){throw new SrvException(UserErrorType.ERR_NOT_FOUND);}
-        UserPub usr = lst.getFirst();
+    public User loginUser(JwtRequest request){
+        List<User> lst = userRepository.findByLogin(request.getLogin());
+        if(lst.isEmpty() ){throw new SrvException(ErrorType.USR_NOT_FOUND);}
+        User usr = lst.get(0);
         if( usr.getPassword() != null && request.getPassword() != null){ //сравнение если оба не null
             if (!(usr.getPassword().equals(request.getPassword()))) {
-                throw new SrvException(UserErrorType.ERR_INCORRECT_PASSWORD);
+                throw new SrvException(ErrorType.USR_INCORRECT_PASSWORD);
             }
         }
         if( !(usr.getPassword() == null || usr.getPassword().isEmpty()) //сравнение если null или пустые
            && (request.getPassword() == null) || request.getLogin().isEmpty()) {
-            throw new SrvException(UserErrorType.ERR_INCORRECT_PASSWORD);
+            throw new SrvException(ErrorType.USR_INCORRECT_PASSWORD);
         }
         return (usr);
     }
 
     @Override
-    public UserDto createUser(UserPub user){
-        UserPub usr = userRepository.save(user);
+    public UserDto createUser(User user){
+        User usr = userRepository.save(user);
         return UserMapper.mapToUserDto(userRepository.save(user));
     }
 
     @Override
 //    @PostAuthorize("returnedObject.userId == principal.userId")
     public UserDto getUser(Long userId){
-        UserPub usr = userRepository.findById(userId).orElseThrow(() -> new SrvException(UserErrorType.ERR_NOT_FOUND));
+        User usr = userRepository.findById(userId).orElseThrow(() -> new SrvException(ErrorType.USR_NOT_FOUND));
         return UserMapper.mapToUserDto(usr);
     }
 
     @Override
-    public UserDto updateUser(Long userId, UserPub user){
-        if( user.getEmail() ==null || user.getEmail().isEmpty()){throw new SrvException(UserErrorType.ERR_EMAIL_EMPTY);}
-        UserPub usr = userRepository.findById(userId).orElseThrow(() -> new SrvException(UserErrorType.ERR_NOT_FOUND));
+    public UserDto updateUser(Long userId, @org.jetbrains.annotations.NotNull User user){
+        if( user.getEmail() ==null || user.getEmail().isEmpty()){throw new SrvException(ErrorType.USR_EMAIL_EMPTY);}
+        User usr = userRepository.findById(userId).orElseThrow(() -> new SrvException(ErrorType.USR_NOT_FOUND));
 
         usr.setFirstName(user.getFirstName());
         usr.setLastName(user.getLastName());
@@ -81,7 +84,7 @@ public class UserService implements UserServiceInterface {
 
     @Override
     public void deleteUser(Long userId){
-        userRepository.findById(userId).orElseThrow(() -> new SrvException(UserErrorType.ERR_NOT_FOUND));
+        userRepository.findById(userId).orElseThrow(() -> new SrvException(ErrorType.USR_NOT_FOUND));
         userRepository.deleteById(userId);
         return;
     }
